ファイル数制限を実装した。 以下の2つの値を設定できる。 javelin.log.jvn.max jvnファイル数(デフォルト256) javelin.log.zip.max zipファイル数(デフォルト256)
git-svn-id: https://www.seasar.org/svn/sandbox/s2javelin/trunk@192 eeba10ee-d406-0410-b51a-bfa74c1c70a0